--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["embla", "Linkedin", "shadcn", "sonner", "vaul"]
+  "cSpell.words": ["embla", "Jalali", "Linkedin", "shadcn", "sonner", "vaul"]
 }
